--- a/upgrade_employ/pubspec.yaml
+++ b/upgrade_employ/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get: ^4.6.6
+  google_fonts: ^6.2.1
+  flashtoast: ^0.0.11
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
