--- a/upgrade_employ/pubspec.yaml
+++ b/upgrade_employ/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   flashtoast: ^0.0.11
   connectivity_plus: ^6.0.3
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
