--- a/upgrade_employ/pubspec.yaml
+++ b/upgrade_employ/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   flashtoast: ^0.0.11
-  connectivity_plus: ^6.0.3
+  # connectivity_plus: ^6.0.3
   flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
@@ -64,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - asset/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
